--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "lorem-ipsum": "^2.0.4",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-csv": "^2.0.3",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
@@ -26,7 +28,8 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
