--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
+    "react-file-reader": "^1.1.4",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
