--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "history": "^5.1.0",
     "https": "^1.0.0",
     "lorem-ipsum": "^2.0.4",
+    "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-csv": "^2.0.3",
