--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-file-reader": "^1.1.4",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-spinners": "^0.11.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1",
