--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,7 @@
 {
     "API_URL": "https://classroom-api-18120595.herokuapp.com",
+    "API_URL1": "http://localhost:3030",
+    "BASE_URL": "https://18120595-webnc.surge.sh/",
     "CARD_IMAGE": "https://p18cdn4static.sharpschool.com/UserFiles/Servers/Server_102145/Image/Our%20School/Academic%20Information/Grading%20Policy/1413463042370_wnp250.jpg",
     "GG_CLIENTID": "456562452797-8l37bdgcv5uuacglkgjpkobpvs6nelli.apps.googleusercontent.com",
     "FB_APPID": "1049530302499866"
